fixed spacing error and changed header link to W3C/unicorn

--- a/includes/style.css
+++ b/includes/style.css
@@ -66,9 +66,6 @@ li {
 
 #exhibit {
 	float:right;
-	width:150px;
-	margin-top:25px;
-	margin-right:17px;
 }
 
 .tabs {
